--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,9 +157,9 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="212dp"
-        android:background="#BDBEA9"
+        android:background="#fff0f5"
         android:text="Sign In"
-        android:textColor="#FAFFFD"
+        android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -175,9 +175,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="356dp"
-        android:background="#BDBEA9"
+        android:background="#fff0f5"
         android:text="Create Account"
-        android:textColor="#FAFFFD"
+        android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
