--- a/app/src/main/res/menu/edit_test_menu.xml
+++ b/app/src/main/res/menu/edit_test_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/view_tests"
-        android:title="View Test"
+        android:title="View Tests"
         app:showAsAction="ifRoom|withText"/>
 
     <item
