--- a/app/src/main/res/menu/create_question_menu.xml
+++ b/app/src/main/res/menu/create_question_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/view_tests"
+        android:id="@+id/view_test"
         android:title="View Test"
         app:showAsAction="ifRoom|withText"/>
 
