can add question to test from question bank

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="10dp"
         android:layout_marginBottom="8dp"
-        android:background="#FA824C"
+        android:background="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16"
@@ -90,8 +90,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:hint="Enter Name"
-        android:textColorHint="#FAFFFD"
-        android:textColor="#FAFFFD"
+        android:textColorHint="@color/colorAccent"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,8 +108,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:hint="Enter Email"
-        android:textColorHint="#FAFFFD"
-        android:textColor="#FAFFFD"
+        android:textColorHint="@color/colorAccent"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/create_account_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -129,8 +129,8 @@
         android:layout_marginBottom="552dp"
         android:ems="10"
         android:hint="Enter Password"
-        android:textColorHint="#FAFFFD"
-        android:textColor="#FAFFFD"
+        android:textColorHint="@color/colorAccent"
+        android:textColor="@android:color/black"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,8 +148,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="248dp"
         android:hint="Enter State"
-        android:textColor="#FAFFFD"
-        android:textColorHint="#FAFFFD"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -168,8 +168,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="336dp"
         android:hint="Enter Grade Level"
-        android:textColorHint="#FAFFFD"
-        android:textColor="#FAFFFD"
+        android:textColorHint="@color/colorAccent"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -188,8 +188,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="260dp"
         android:hint="Enter Content"
-        android:textColorHint="#FAFFFD"
-        android:textColor="#FAFFFD"
+        android:textColorHint="@color/colorAccent"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
