--- a/app/src/main/res/layout/activity_standard_coverage.xml
+++ b/app/src/main/res/layout/activity_standard_coverage.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="64dp"
-        android:text="50 %"
+        android:text=""
         android:textSize="45sp"
         app:layout_constraintBottom_toTopOf="@+id/standard_coverage_recyclerView"
         app:layout_constraintEnd_toStartOf="@+id/standard_coverage_progressbar"
