--- a/app/src/main/res/layout/activity_standard_coverage.xml
+++ b/app/src/main/res/layout/activity_standard_coverage.xml
@@ -43,7 +43,6 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="418dp"
         android:layout_height="68dp"
-        android:layout_marginTop="44dp"
         android:layout_marginEnd="120dp"
         android:progress="50"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,12 +53,14 @@
         android:layout_width="789dp"
         android:layout_height="812dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="65dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/standard_coverage_progressbar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
