--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_one"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,18 +14,18 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/amaranth"
         android:text="TestCore | "
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="50dp"
+        android:textSize="60dp"
         android:textStyle="bold"
-        android:fontFamily="@font/unica_one"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.192"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.142" />
 
     <TextView
         android:id="@+id/header_two"
@@ -36,51 +35,36 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/amaranth"
         android:text="Test making made easy"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:fontFamily="@font/unica_one"
 
-        android:textSize="40dp"
+        android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintHorizontal_bias="0.26"
         app:layout_constraintStart_toEndOf="@+id/header_one"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintVertical_bias="0.151" />
 
-    <View
-        android:id="@+id/horizontal_line_one"
-        android:layout_width="wrap_content"
-        android:layout_height="10dp"
-        android:layout_marginTop="208dp"
-        android:layout_marginBottom="129dp"
-        android:background="@android:color/black"
-        app:layout_constraintBottom_toTopOf="@+id/welcome_message"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/welcome_message"
         android:layout_width="620dp"
         android:layout_height="188dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="136dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:text="Make test-making easy with TestCore! Organize your test questions by standards with just a few clicks!"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="25sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin_button"
-        app:layout_constraintVertical_bias="0.617" />
+        app:layout_constraintTop_toBottomOf="@+id/signin_button" />
 
     <ImageView
         android:id="@+id/banner_image"
@@ -123,7 +107,7 @@
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/colorAccent"
+        android:textColorHint="@color/colorSecondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.869"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,7 +125,7 @@
         android:hint="Enter Password"
         android:inputType="textPassword"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/colorAccent"
+        android:textColorHint="@color/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.995"
@@ -157,9 +141,9 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="212dp"
-        android:background="#fff0f5"
+        android:background="@drawable/capsule_button"
         android:text="Sign In"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -168,21 +152,38 @@
         app:layout_constraintTop_toBottomOf="@+id/signin_password"
         app:layout_constraintVertical_bias="0.0" />
 
+
+    <TextView
+        android:layout_width="108dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="44dp"
+        android:text="New User? "
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/start_create_account"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/start_create_account"
         android:layout_width="207dp"
         android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="356dp"
-        android:background="#fff0f5"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="324dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/capsule_button"
         android:text="Create Account"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.784"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
+        app:layout_constraintVertical_bias="0.716" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
