--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -105,6 +105,14 @@
 
                 android:text=""
                 android:textSize="25sp" />
+
+            <ProgressBar
+                android:id="@+id/progressBar_userInfo"
+                style="?android:attr/progressBarStyle"
+                android:layout_below="@+id/welcome_message"
+                android:layout_centerHorizontal="true"
+                android:layout_width="162dp"
+                android:layout_height="111dp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
