--- a/app/src/main/res/layout/activity_standard_coverage.xml
+++ b/app/src/main/res/layout/activity_standard_coverage.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_one"
     tools:context=".StandardCoverageActivity">
 
     <TextView
@@ -34,16 +35,17 @@
         android:textSize="45sp"
         app:layout_constraintBottom_toTopOf="@+id/standard_coverage_recyclerView"
         app:layout_constraintEnd_toStartOf="@+id/standard_coverage_progressbar"
-        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintHorizontal_bias="0.924"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/standard_coverage_heading" />
+        app:layout_constraintTop_toBottomOf="@+id/standard_coverage_heading"
+        app:layout_constraintVertical_bias="0.454" />
 
     <ProgressBar
         android:id="@+id/standard_coverage_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="418dp"
         android:layout_height="68dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginEnd="164dp"
         android:progress="50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/standard_coverage_heading" />
