--- a/app/src/main/res/layout/one_test_existing_questions.xml
+++ b/app/src/main/res/layout/one_test_existing_questions.xml
@@ -50,6 +50,7 @@
                 android:layout_toRightOf="@+id/one_test_question_bank"
                 android:background="@android:color/transparent"
                 android:padding="8dp"
+                android:layout_marginRight="10dp"
                 android:src="@drawable/circleminusicon" />
 
             <Button
@@ -58,6 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/delete_question_bank"
                 android:background="@android:color/transparent"
+                android:layout_marginLeft="10dp"
                 android:text="Edit" />
 
             <TextView
